--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,2 @@
 PORT=8080
-ATLAS_URI=mongodb+srv://admin:admin123@cardetails.jpaxjlp.mongodb.net/?retryWrites=true&w=majority&appName=CarDetails
+ATLAS_URI=mongodb+srv://admin:<password>@cardetails.jpaxjlp.mongodb.net/?retryWrites=true&w=majority&appName=CarDetails
